syntax = "proto3";

package product_v1;

import "google/protobuf/timestamp.proto";
import "category.proto";

option go_package = "github.com/milkfrogge/coffee-store/pkg/product_v1;product_v1";



service ProductV1 {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);

  rpc GetSingleProduct(GetSingleProductRequest) returns (GetSingleProductResponse);
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
  rpc GetAllProductsByCategory(GetAllProductsByCategoryRequest) returns (GetAllProductsResponse);
  rpc GetAllCategories(GetAllCategoriesRequest) returns (GetAllCategoriesResponse);

  // TODO: add update and delete for categories and products
}

message ProductInfo {
  string name = 1;
  string description = 2;
  int64 price = 3;
  int64 count = 4;
  Category category = 5;
  repeated string pics = 6;
}

message Product {
  string id = 1;
  ProductInfo info = 2;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateProductRequest {
  ProductInfo info = 1;
}

message CreateProductResponse {
  string id = 1;
}

message GetSingleProductRequest {
  string id = 1;
}

message GetSingleProductResponse {
  Product product = 1;
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated Product product = 1;
}

message GetAllProductsByCategoryRequest {
  string id = 1;
}